--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <p class="flex flex-col mt-2">
       <span class="text-2xl">Usually work with</span>
 
-      <a href="https://fastapi.tiangolo.com" class="text-cyan-300 text-xl underline w-fit hover:opacity-60">
+      <a href="https://fastapi.tiangolo.com" class="text-cyan-300 lg:text-xl text-2xl underline w-fit hover:opacity-60">
         <img src="https://fastapi.tiangolo.com/img/favicon.png" alt="FastAPI icon" class="lg:size-8 size-5 inline-block mr-1">
         FastAPI
       </a>
