--- a/index.html
+++ b/index.html
@@ -9,61 +9,61 @@
 
   <div>
     <h1 class="text-6xl font-bold text-stone-100">Kuyugama Hikamiya</h1>
-    <span class="text-3xl">Python/Kotlin developer</span>
+    <span class="lg:text-3xl text-5xl">Python/Kotlin developer</span>
 
     <p class="flex flex-col mt-2">
-      <span class="text-2xl">Usually work with</span>
+      <span class="lg:text-2xl text-4xl">Usually work with</span>
 
-      <a href="https://fastapi.tiangolo.com" class="text-cyan-300 lg:text-xl text-2xl underline w-fit hover:opacity-60">
-        <img src="https://fastapi.tiangolo.com/img/favicon.png" alt="FastAPI icon" class="lg:size-8 size-5 inline-block mr-1">
+      <a href="https://fastapi.tiangolo.com" class="text-cyan-300 lg:text-xl text-4xl underline w-fit hover:opacity-60">
+        <img src="https://fastapi.tiangolo.com/img/favicon.png" alt="FastAPI icon" class="size-8 inline-block mr-1">
         FastAPI
       </a>
 
-      <a href="https://aiogram.dev" class="text-cyan-300 text-xl underline w-fit hover:opacity-60">
-        <img src="https://aiogram.dev/assets/images/aiogram-logo.svg" alt="Aiogram icon" class="lg:size-8 size-5 inline-block mr-1">
+      <a href="https://aiogram.dev" class="text-cyan-300 lg:text-xl text-4xl underline w-fit hover:opacity-60">
+        <img src="https://aiogram.dev/assets/images/aiogram-logo.svg" alt="Aiogram icon" class="size-8 inline-block mr-1">
         Aiogram
       </a>
 
-      <a href="https://www.postgresql.org/" class="text-cyan-300 text-xl underline w-fit hover:opacity-60">
-        <img src="https://www.postgresql.org/media/img/about/press/elephant.png" alt="PostgreSQL icon" class="lg:size-8 size-5 inline-block mr-1">
+      <a href="https://www.postgresql.org/" class="text-cyan-300 lg:text-xl text-4xl underline w-fit hover:opacity-60">
+        <img src="https://www.postgresql.org/media/img/about/press/elephant.png" alt="PostgreSQL icon" class="size-8 inline-block mr-1">
         PostgreSQL
       </a>
 
-      <a href="https://redis.io/" class="text-cyan-300 text-xl underline w-fit hover:opacity-60">
-        <img src="redis.png" alt="Redis icon" class="lg:size-8 size-5 inline-block mr-1">
+      <a href="https://redis.io/" class="text-cyan-300 lg:text-xl text-4xl underline w-fit hover:opacity-60">
+        <img src="redis.png" alt="Redis icon" class="size-8 inline-block mr-1">
         Redis
       </a>
 
-      <a href="https://developer.android.com/compose" class="text-cyan-300 text-xl underline w-fit hover:opacity-60">
-        <img src="jetcompose.png" alt="Jetpack Compose icon" class="lg:size-8 size-5 inline-block mr-1">
+      <a href="https://developer.android.com/compose" class="text-cyan-300 lg:text-xl text-4xl underline w-fit hover:opacity-60">
+        <img src="jetcompose.png" alt="Jetpack Compose icon" class="size-8 inline-block mr-1">
         Jetpack Compose
       </a>
     </p>
 
     <p class="flex flex-col mt-2">
-      <span class="text-2xl">Contact me</span>
+      <span class="lg:text-xl text-4xl">Contact me</span>
 
-      <a href="https://github.com/kuyugama" class="text-cyan-300 text-xl underline w-fit hover:opacity-60">
-        <img src="https://github.githubassets.com/favicons/favicon-dark.svg" alt="GitHub icon" class="lg:size-8 size-5 inline-block mr-1">
+      <a href="https://github.com/kuyugama" class="text-cyan-300 lg:text-xl text-4xl underline w-fit hover:opacity-60">
+        <img src="https://github.githubassets.com/favicons/favicon-dark.svg" alt="GitHub icon" class="size-8 inline-block mr-1">
         GitHub
       </a>
 
-      <a href="https://instagram.com/kuyugama" class="text-cyan-300 text-xl underline w-fit hover:opacity-60">
-        <img src="instagram.ico" alt="Instagram icon" class="lg:size-8 size-5 inline-block mr-1">
+      <a href="https://instagram.com/kuyugama" class="text-cyan-300 lg:text-xl text-4xl underline w-fit hover:opacity-60">
+        <img src="instagram.ico" alt="Instagram icon" class="size-8 inline-block mr-1">
         Instagram
       </a>
 
-      <a href="https://t.me/kuyugama" class="text-cyan-300 text-xl underline w-fit hover:opacity-60">
-        <img src="https://telegram.org/img/website_icon.svg" alt="Telegram icon" class="lg:size-8 size-5 inline-block mr-1">
+      <a href="https://t.me/kuyugama" class="text-cyan-300 lg:text-xl text-4xl underline w-fit hover:opacity-60">
+        <img src="https://telegram.org/img/website_icon.svg" alt="Telegram icon" class="size-8 inline-block mr-1">
         Telegram
       </a>
 
-      <a href="https://x.com/kuyugama" class="text-cyan-300 text-xl underline w-fit hover:opacity-60">
-        <img src="twixter.png" alt="Twixter icon" class="lg:size-8 size-5 inline-block mr-1">
+      <a href="https://x.com/kuyugama" class="text-cyan-300 lg:text-xl text-4xl underline w-fit hover:opacity-60">
+        <img src="twixter.png" alt="Twixter icon" class="size-8 inline-block mr-1">
         Twixter
       </a>
 
-      <a href="mailto:kuyugama@proton.me" class="text-cyan-300 text-xl underline w-fit hover:opacity-60">
+      <a href="mailto:kuyugama@proton.me" class="text-cyan-300 lg:text-xl text-4xl underline w-fit hover:opacity-60">
         E-mail
       </a>
     </p>
